Final version before pages all changed to mobile use. Called Version 2.1.2.7. New version will be 2.1.3.0

--- a/Web.config
+++ b/Web.config
@@ -5,8 +5,9 @@
   -->
 <configuration>
 	<appSettings>
-		<add key="Version" value="2.1.2.5" />
+		<add key="Version" value="2.1.2.8" />
 		<add key="SysEmailFrom" value="orders@quaffee.co.za" />
+		<add key="SysCCEmailAddress" value="ccorders@quaffee.co.za" />
 		<add key="EMailLogIn" value="noreply@quaffee.co.za" />
 		<add key="EMailPassword" value="Fr3sh-$pec!alty~Qu4ff33" />
 		<add key="EMailSMTP" value="smtp.office365.com" />
@@ -21,9 +22,13 @@
 		<add key="DisableClientSecret" value="FrogQuaffer!IsSad2SayGoodBye.K8mF3nR9" />
 		<add key="ApplicationBaseUrl" value="http://localhost:51830/" />
 		<!-- Email Test Mode Configuration -->
-		<add key="EmailTestMode" value="false" />
+		<add key="EmailTestMode" value="true" />
 		<add key="EmailTestRecipient" value="warren@machanik.com" />
 		<add key="EnableDatabaseDetailedLogging" value="false" />
+		<!-- Cioffe checkup Configurations -->
+		<add key="CoffeeCheckupReminderWindowDays" value="9" />
+		<add key="CoffeeCheckupReminderWindowMin" value="5" />
+		<add key="CoffeeCheckupReminderWindowMax" value="30" />
 	</appSettings>
 
 	<connectionStrings>
@@ -151,11 +156,11 @@
 		</system.web>
 	</location>
 	<location path="DisableClient.aspx">
-    <system.web>
-        <authorization>
-            <allow users="*" />
-            <!-- Allows all users, but we'll validate using the security token -->
-        </authorization>
-    </system.web>
-</location>
+		<system.web>
+			<authorization>
+				<allow users="*" />
+				<!-- Allows all users, but we'll validate using the security token -->
+			</authorization>
+		</system.web>
+	</location>
 </configuration>
